Update index.html, remove old logos, add favicon.ico

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     }
 
     /* ------------------------
-       MENU MOBILE (apparait sur petits écrans)
+       MENU MOBILE (apparaît sur petits écrans)
     ------------------------ */
     .mobile-menu {
       display: none; /* caché par défaut, visible seulement en mobile */
@@ -172,6 +172,18 @@
       right: 0;
       z-index: 1000;
     }
+
+    /* Logo dans le menu mobile */
+    .mobile-logo {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .mobile-logo img {
+      height: 30px; /* ajuste la taille du logo */
+      width: auto;
+    }
+
     #menu-toggle {
       background: none;
       border: 2px solid var(--white);
@@ -482,7 +494,11 @@
 
   <!-- MENU MOBILE (barre en haut) -->
   <div class="mobile-menu">
-    <div><strong>Ysquare Consulting</strong></div>
+    <div class="mobile-logo">
+      <!-- Logo dans le header mobile -->
+      <img src="images/image-03.png" alt="Logo Ysquare Consulting" />
+      <strong>Ysquare Consulting</strong>
+    </div>
     <!-- Bouton hamburger -->
     <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
   </div>
@@ -674,7 +690,6 @@
     document.addEventListener("DOMContentLoaded", () => {
       const menuToggle = document.getElementById("menu-toggle");
       const mobileNav = document.getElementById("mobileNav");
-      const mainNavDesktop = document.querySelector("nav.main-nav:not(.mobile)");
       const langSelect = document.getElementById("lang-select");
       const logoContainer = document.getElementById("logoContainer");
 
@@ -693,7 +708,7 @@
       }
 
       // ------------------------
-      // LOGO : Overlay contact
+      // LOGO : Overlay contact (Desktop)
       // ------------------------
       if (logoContainer) {
         logoContainer.addEventListener("click", () => {
